deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kutt
  namespace: kutt
spec:
  template:
    metadata:
      labels:
        app: kutt
    spec:
      imagePullSecrets:
      - name: github-registry
      containers:
      - image: docker.pkg.github.com/hugomd/kutt/kutt:<VERSION>
        name: kutt
        ports:
        - containerPort: 3000
      - name: redis
        image: redis
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kutt
  namespace: kutt
spec:
  selector:
    app: kutt
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kutt
  namespace: kutt
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: hu.md
    http:
      paths:
      - path: /
        backend:
          serviceName: kutt
          servicePort: 80
  tls:
    - secretName: kutt-tls-prod-cert
      hosts:
        - hu.md
